--- a/src/components/DeleteBasicBankComponent.css
+++ b/src/components/DeleteBasicBankComponent.css
@@ -92,7 +92,7 @@ margin-top: 1vh;
 }
 
 .deletebbbutton{
-    width: 18vw;
+    width: 14rem;
     height: 8vh;
     font-weight: 600;
     letter-spacing: 1.5px;
@@ -100,7 +100,9 @@ margin-top: 1vh;
     font-size: 18px;
     border-radius: 10px;
     color: rgb(3, 17, 42);
-    margin-top: 4vh;
+    margin-top: 2vh;
+    border: solid 2px green;
+
 }
 
 
