--- a/src/components/DeleteBasicBankComponent.css
+++ b/src/components/DeleteBasicBankComponent.css
@@ -97,11 +97,11 @@ margin-top: 1vh;
     font-weight: 600;
     letter-spacing: 1.5px;
     background-color: rgb(139, 110, 35);
-    font-size: 18px;
+    font-size: 40px;
+    letter-spacing: .1.5rem;
     border-radius: 10px;
     color: rgb(3, 17, 42);
     margin-top: 2vh;
-    border: solid 2px green;
 
 }
 
