connedted the css file

--- a/src/components/Create.css
+++ b/src/components/Create.css
@@ -4,9 +4,16 @@
 
 
 
-    
-.fullAccountsPage{
 
+.fullAccountsPage{
+border: solid 2px green;
 }
+
+.topHeader{
+    border: solid 2px green;
+}
+
+
+
 
 }
