--- a/src/components/Create.css
+++ b/src/components/Create.css
@@ -18,13 +18,13 @@ height: 62rem;
 }
 
 .createNewAccountHeader{
-    border: solid 2px green;
     width: 18rem;
     margin: 0 auto;
 }
 
 .createbottomsection{
-
+    width: 100%;
+    height: 100%;
 }
 
 .createNewAccountForm{
