--- a/src/components/Create.css
+++ b/src/components/Create.css
@@ -89,6 +89,7 @@ width: 100%;
     width: 12rem;
     margin-top: .2rem;
     margin-left: 4.8rem;
+
 }
 
 
@@ -96,10 +97,15 @@ width: 100%;
 .emailBlock{
     border: solid 2px green;
     margin-top: 1vh;
+    width: 22rem;
+    margin-left: .5vw;
 }
 
 
 .email{
+    border: solid 2px pink;
+    width: 20rem;
+
 
 }
 
