--- a/src/components/Create.css
+++ b/src/components/Create.css
@@ -34,9 +34,10 @@
     display: flex;
     flex-flow: row wrap;
     overflow: auto;
-    height: 75%;
+    height: 62rem;
     width: 100%;
     overflow: hidden;
+    border: solid 2px green;
 }
 
 .createUserSection{
@@ -87,8 +88,8 @@ width: 100%;
 
 .lastNameText{
     width: 12rem;
-    margin-top: .2rem;
     margin-left: 4.8rem;
+    border: solid 2px green;
 
 }
 
@@ -104,6 +105,7 @@ width: 100%;
 .email{
     width: 20rem;
     height: 4.8rem;
+    border: solid 2px green;
 
 }
 
@@ -112,7 +114,43 @@ width: 100%;
     margin-left: 7rem;
     width: 8rem;
     margin-top: 1vh;
+    border: solid 2px green;
+
 }
+
+
+.createAccountSection{
+    border: solid 2px green;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.accountTypeBlock{
+    border: solid 2px green;
+    margin: 0 auto;
+}
+
+.accounttype{
+
+}
+
+.accountTypeText{
+
+}
+
+.depositBlock{
+
+}
+
+.deposit{
+
+}
+
+.emailText{
+
+}
+
 
 
 
