--- a/src/components/Create.css
+++ b/src/components/Create.css
@@ -89,8 +89,6 @@ width: 100%;
 .lastNameText{
     width: 12rem;
     margin-left: 4.8rem;
-    border: solid 2px green;
-
 }
 
 
@@ -105,7 +103,6 @@ width: 100%;
 .email{
     width: 20rem;
     height: 4.8rem;
-    border: solid 2px green;
 
 }
 
@@ -114,7 +111,6 @@ width: 100%;
     margin-left: 7rem;
     width: 8rem;
     margin-top: 1vh;
-    border: solid 2px green;
 
 }
 
@@ -124,11 +120,13 @@ width: 100%;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
+    width: 100%;
 }
 
 .accountTypeBlock{
     border: solid 2px green;
     margin: 0 auto;
+    width: 90%;
 }
 
 .accounttype{
