--- a/src/components/Create.css
+++ b/src/components/Create.css
@@ -34,7 +34,7 @@
     display: flex;
     flex-flow: row wrap;
     overflow: auto;
-    height: 80rem;
+    height: 90rem;
     width: 100%;
     overflow: hidden;
     border: solid 2px orange;
@@ -43,7 +43,7 @@
 .createUserSection{
     display: flex;
     flex-direction: column;
-    height: 50%;
+    height: 55%;
     margin: 0 auto;
     border: solid 2px gold;
 
@@ -118,12 +118,11 @@ width: 100%;
 
 
 .createAccountSection{
-    border: solid 2px green;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
-    width: 100%;
-    height: 100%;
+    width: 90%;
+    height: 27rem;
 }
 
 .accountTypeBlock{
@@ -142,22 +141,27 @@ width: 100%;
 }
 
 .depositBlock{
-    border: solid 2px green;
     width: 95%;
     margin-left: 1vw;
 
 }
 
 .deposit{
-    border: solid 2px blue;
     width: 20rem;
     margin: 0 auto;
-    margin-left: 3rem;
+    margin-left: 2rem;
 
 }
 
 .emailText{
+    width: 12rem;
+    margin-left: 7rem;
 
+}
+
+
+.openAccountButton{
+    border: solid 2px green;
 }
 
 
